<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppThemeLight"
    android:orientation="vertical"
    android:background="@color/very_light_gray">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        tools:ignore="MissingConstraints" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:background="@color/white"
                android:id="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="头像"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar_image_view"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="0"
                    android:background="@drawable/add"
                    android:backgroundTint="@color/colorPrimary"
                    app:shapeAppearance="@style/CircleStyle" />

            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    />
                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:hint="用户名"
                    android:padding="16dp" />

            </LinearLayout>
            <LinearLayout
                android:background="@color/white"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/a2"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"

                app:layout_constraintTop_toBottomOf="@+id/a1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="真实姓名:"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="0"
                    />
                <EditText
                    android:id="@+id/edit_realName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:hint="请输入您的姓名"
                    android:padding="16dp"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:id="@+id/a3"
                app:layout_constraintTop_toBottomOf="@+id/a2">
                <TextView
                    android:id="@+id/gender_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_title"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/a2"/>

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:checkedButton="@+id/male_radio_button"
                    app:layout_constraintTop_toBottomOf="@+id/gender_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:text="@string/male_radio_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:text="@string/female_radio_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aaa"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/age_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_title"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp" />

                <SeekBar
                    android:id="@+id/age_seek_bar"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/age_seek_bar_text"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="4dp"/>
                <TextView
                    android:id="@+id/tvProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="shuzi" />

            </LinearLayout>
            <LinearLayout
                android:background="@color/white"
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_seek_bar">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="省份:"
                    android:layout_marginStart="16dp"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/age_seek_bar">

                </TextView>

                <Spinner
                    android:id="@+id/province_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:entries="@array/province_array"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:prompt="@string/province_prompt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/age_seek_bar" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="学校:"
                    android:layout_marginStart="16dp"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/age_seek_bar">

                </TextView>

                <Spinner
                    android:id="@+id/university_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:prompt="@string/university_prompt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/province_spinner" />

            </LinearLayout>
            <TextView
                android:id="@+id/terms_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:text="@string/terms_title"
                app:layout_constraintEnd_toEndOf="@+id/b1"
                app:layout_constraintTop_toBottomOf="@+id/b1" />
            <Button
                android:id="@+id/submit_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_btn"
                android:text="提交"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>



    </ScrollView>


</LinearLayout>
